Surprising Dark Mode button changes :) + Fixed Back-to-top button cursor when hidden/visible

--- a/public/css/all-fragrances.css
+++ b/public/css/all-fragrances.css
@@ -634,8 +634,8 @@ html {
   position: absolute; 
 
   /* Positioning at the bottom right */
-  top: 93%; 
-  margin-left: 94%;
+  top: 90%; 
+  margin-left: 94.5%;
 
   animation: moveFromBottom 1.35s ease-in-out; /* Animation to move in manually when loading screen because scrolly wouldn't work!*/
 }
@@ -667,8 +667,11 @@ html {
 
   /* Intially hidden to only appear at a certain point */
   opacity: 0;
+  cursor: default;
   /* This controls how fast the animation for opacity/fading in/out happens! Used with appearing at certain scroll position */
   transition: opacity 0.5s ease;
+
+  scale: 0.9;
 }
 
 #back-to-top-button:hover {
